apps/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: freeroom
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgadmin
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "300m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-data
